--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+opt-level = 's' # Optimize for size
 
 [dependencies]
 include_dir = "0.7.3"   
 # futures = "0.3"
-hyper = { version = "0.14", features = ["full"] }
-tokio = { version = "1", features = ["full"] }
+hyper = { version = "0.14", features = ["server", "http1", "runtime"] }
+tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
 
