--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ include_dir = "0.7.3"
 # futures = "0.3"
 hyper = { version = "0.14", features = ["server", "http1", "runtime"] }
 tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
-
+debug_print = "1.0.0"
+flate2 = "1"
