--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,7 @@ opt-level = 's' # Optimize for size
 
 [dependencies]
 include_dir = "0.7.3"   
-# futures = "0.3"
 hyper = { version = "0.14", features = ["server", "http1", "runtime"] }
-tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 debug_print = "1.0.0"
 flate2 = "1"
