--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ hyper = { version = "0.14", features = ["server", "http1", "runtime"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 debug_print = "1.0.0"
 flate2 = "1"
+cached = "0.40.0"
